assets/style.css
.header {
    display: flex;
    width: 1420px;
    background-image: linear-gradient(rgb(70, 70, 214), rgb(96, 123, 190));
    flex-direction: row;
    padding-left: 30px;
    justify-content: space-between;
    border-bottom: solid rgb(248, 102, 44) 2px;
    border-top: solid rgb(248, 102, 44) 2px;
    margin-bottom: 40px;
}

.navigation {
    position: absolute;
    left: 510px;
    top: 7px;
}

ul {
    display: flex;
    list-style-type: none;
    width: 350px;
    flex-direction: row;
    justify-content: space-around;
    font-size: 20px;
    text-decoration: none;
    align-items: center
}

li a:hover {
    color: rgb(15, 6, 139)
}

.title {
    background-image: url(../assets/images/jenna-beekhuis-Bm0Ja6LZWl4-unsplash.jpg);
    background-position-y: -150px;
    background-position-x: 250px;
    display: flex;
    align-items: space-between;
    flex-direction: column;
    height: 80px;
    border-left: solid rgb(226, 190, 190) 1px;
    border-right: solid rgb(226, 190, 190) 1px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 1px;
    box-shadow: -6px 1px 45px 10px rgba(255,94,1,1);
}

body {
    background-image: url(../assets/images/jenna-beekhuis-Bm0Ja6LZWl4-unsplash.jpg);
    background-position: center center;
    margin: 0;
    padding: 0;
    height: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

html {
    height: 100%;
}

#name {
    font-size: 30px;
    position: relative;
    bottom: 5px;
}

/* #sites {
    font-size: 22px;
    font-weight: bold;
    align-self: flex-start;
    padding-top: 0px;
    position: relative;
    bottom: 22px;
    margin-right: 20px;
    background-image: url(../assets/images/jenna-beekhuis-Bm0Ja6LZWl4-unsplash.jpg);
    background-position-y: -150px;
    background-position-x: 250px;
    border-right: solid white 1px;
    border-left: solid white 1px;
    height: 100%;
} */

#position {
    height: 10%;
    font-size: 15px;
    position: relative;
    font-weight: bold;
    bottom: 47px;
    left: 40px;
}

.main-content {
    display: flex;
    background: rgb(241, 225, 225, 0.7);
    width: 800px;
    margin-left: 320px;
    height: 600px;
    flex-direction: column;
    border: solid 1px rgb(90, 90, 253);
    box-shadow: 2px 2px 29px 15px rgba(255,94,1,1);
    margin-bottom: 0;
    padding: 0;
}

#about {
    font-size: 28px;
    align-self: flex-start;
    width: 790px;
    background-image: linear-gradient(rgb(70, 70, 214), rgb(96, 123, 190));
    position: relative;
    bottom: 20px;
    border-bottom: solid rgb(230, 218, 218) 3px;
    height: 30px;
    padding-left: 10px;
    padding-top: 8px;
    padding-bottom: 10px;
}

img {
    width: 200px;
    height: 150px;
    align-self: flex-start;
    margin-right: 10px;
    margin-left: 10px;
    position: relative;
    bottom: 30px;
    border: 1px solid blue;
}

#paragraph {
    align-self: flex-start;
    font-size: 17px;
    margin-left: 10px;
    position: relative;
    bottom: 35px;
}

.bio {
    display: flex;
    width: 800px;
    height: 600px;
    flex-direction: row;
    justify-content: flex-end;
}

.links {
    display: flex;
    font-size: 22px;
    font-weight: bold;
    padding-top: 0px;
    position: relative;
    bottom: 0px;
    margin-right: 40px;
    background-image: url(../assets/images/jenna-beekhuis-Bm0Ja6LZWl4-unsplash.jpg);
    background-position-y: -150px;
    background-position-x: 250px;
    border-right: solid white 1px;
    border-left: solid white 1px;
    flex-direction: column;
    height: 100%;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 10px;
    width: 200px;
    box-shadow: 6px 1px 45px 10px rgba(255,94,1,1);
}

#sites {
    position: relative;
    bottom: 22px;
    border-bottom: rgb(96, 123, 190) 1px solid;
}

.icons {
    display: flex;
    flex-direction: row;
}

.fa-github {
    position: absolute;
    bottom: 6px;
}

.fa-linkedin-square {
    position: absolute;
    bottom: 6px;
    left: 80px;
}

.fa-envelope-square {
    position: absolute;
    bottom: 6px;
    left: 160px;
}

footer {
    margin: 0;
    padding: 0;
    position: absolute;
    bottom: 0px;
    background-image: linear-gradient(rgb(96, 123, 190), rgb(70, 70, 214));
    width: 100%;
    border-top: solid rgb(248, 102, 44) 2px;
    text-align: center;
}

#copyright {
    font-weight: bold;
    font-size: 15px;
}

.black {
    color: black;
}




    

